new release 2.05 New class Acord2 was introduced as a robust alternative for typical two dimensional input configurations (Acord2 is not a complete general solution yet); the idea is to find all (or as many as possible) solutions of coordinates of a selected point and use their median as the robust position estimation. Algorithm Acord2 is followed by the original Acord intersections in gama-local, before the adjustment solution of the network. Acord2 is based on the master's thesis by Petra Millarová <petramillarova@gmail.com> CTU in Prague.

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,10 @@ Developers:
     Václav Petráš <vaclav.petras@fsv.cvut.cz>
         - class SqliteReader
 
+    Petra Millarová <petramillarova@gmail.com>
+        - class Acord2 and other helper classes for combinatorial solution
+          of medians of approximate coordinates
+
 Contributors:
 
     Chuck Ghilani (Surveying Program Chair, Penn State Wilkes-Barre)
