fixed html output of gama-local

--- a/ChangeLog.1
+++ b/ChangeLog.1
@@ -1714,7 +1714,7 @@ See ChangeLog file for newer changes
        information needed for network adjustment, it's necessary to
        revise the output xml file / input data for GaMa (fixed points,
        adjusted points etc.)  Program doesn't support conversion of
-       angular values in sexadecimal format (um 360)
+       angular values in sexagesimal format (um 360)
 
 
 0.9.31   1999.12.23
