--- a/doc/gama.texi
+++ b/doc/gama.texi
@@ -48,7 +48,7 @@ Free Documentation License''.
 @c The following two commands start the copyright page.
 @page
 @vskip 0pt plus 1filll
-Copyright @copyright{} 2003, 2013 Aleš Čepek.
+Copyright @copyright{} 2003, 2013, 2019 Aleš Čepek.
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.1 or
