--- a/AUTHORS
+++ b/AUTHORS
@@ -72,3 +72,11 @@ Contributors:
         - concept of XML tag 'extern' for linking adjustement XML input
           and output with external database keys
         - conda-forge/gama-feedstock
+
+    Oleg Goussev
+        - bug in azimuth definition in input XML (missing optional
+          attribude from="")
+        - bug in html output format for --angles 360 (CC units used on several
+          places where SS belong)
+        - bug in gkf input data resulting in segmentation fault (network
+          with observed angles and one distance)
