--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+        * fixed two bugs reported by Oleg Goussev
+          - a bug in html output format for --angles 360 (CC units erroneouly
+            used on several places where SS belong)
+          - a bug in gkf input data resulting in segmentation fault (network
+            with observed angles and one distance)
+
 2019-05-11  Ales Cepek <cepek@gnu.org>
 
 	* new release 2.05
