minor maintenance issues and cleanup * configure.ac : conditional build for makeinfo * gama-pro.cpp moved to .var/deprecated, removed gama-local.pro * relaxed small angles in intersections from 10 to 6 gon   in Acord class during second computation loop * top .gitignore += *.json out * updated version of m4/ax_cxx_compile_stdcxx.m4

--- a/doc/gama.texi
+++ b/doc/gama.texi
@@ -154,7 +154,7 @@ Horpynich, Claudio Fontana, Bronislav Koska, Martin Beckett, Jiří
 Novák, Václav Petráš, Jokin Zurutuza, 项维 (Vim Xiang), Tomáš Kubín,
 Greg Troxel, Kristian Evers and Petra Millarová.
 
-Jiří Veselý if the author of calculation of approximate coordinates by
+Jiří Veselý is the author of calculation of approximate coordinates by
 intersections and transformations (class Acord).
 @c
 Václav Petráš is the author of @ref{SQL schema SQLite and gama-local}.
