--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,33 @@
-2019-07-07  Ales Cepek  <cepek@dodo>
+2019-08-20  Petra Millarova <petramillarova@gmail.com>
 
-        * new release 2.06
+	* new release 2.07
 
-        * fixed two bugs reported by Oleg Goussev
-          - a bug in html output format for --angles 360 (CC units erroneouly
-            used on several places where SS belong)
-          - a bug in gkf input data resulting in segmentation fault)
+	* new features and enhancements in class Acord2 and bug fixes
+	 ** improved AcordTraverse algorithm
+	 ** fixed a bug in finding traverses
+	 ** added new testing data
+	 ** fixed display of total computed points in output
+	 ** compute all possible orientations from standpoints at the end,
+	    they are needed latert
+	 **  fix acordweakchecks and candidate point erasing
+	 ** Misc fixes
+	    - transformation returns correct point coordinates
+	    - reverting to swapping standpoints instead of deleting them
+	    - fixed back orientation search for traverse computation
+	 ** algorithms AcordVectors, AcordHdiffs and AcordZderived
+	 ** fixed zero division for integer vectors demo
+	 ** several minor maintenance issues and cleanup
 
-        * improved AcordTraverse algorithm
+2019-07-07  Ales Cepek  <cepek@gnu.org>
+
+	* new release 2.06
+
+	* fixed two bugs reported by Oleg Goussev
+	  - a bug in html output format for --angles 360 (CC units erroneouly
+	    used on several places where SS belong)
+	  - a bug in gkf input data resulting in segmentation fault)
+
+	* improved AcordTraverse algorithm
 
 2019-05-11  Ales Cepek <cepek@gnu.org>
 
