--- a/ChangeLog.3
+++ b/ChangeLog.3
@@ -1,3 +1,16 @@
+2020-07-01  Ales Cepek <cepek@gnu.org>
+
+	* new release 2.09
+
+	* There is one major fix visible to end users. Implicit value of
+	XML parameter 'update_constrained_coordinates' was changed to
+	"yes". The behavior of adjustment calculation was well and clearly
+	described in the documentation, but in some cases the old implicit
+	value ("no") might have led to poor numerical results. The input
+	data XML parameter 'update_constrained_coordinates' is preserved
+	only for backward compatibility and is likely to be removed in
+	some future release.
+
 2019-08-20  Petra Millarova <petramillarova@gmail.com>
 
 	* new release 2.07
