--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,14 @@
 
 	* new release 2.10
 
+	* Removed obscure adjustment parameter
+	'update-constraiend-parameters'. The update effected SqliteReader
+	lib/gnu_gama/local/sqlitereader.cpp, classes LocalNetwork and
+	GKFparser and file gnu-gama-data.xsd.
 
+	* Removed gnu-gama-data.dtd and all its references (superseded by
+	.xsd), several XML files were updated in tests/gama-g3 to use
+	gnu-gama-data xsd definition.
 
 
 	#######################################
