GNU Octave .m format output, new optional configure option 'extra-tests'
modified:   .gitignore
modified:   CMakeLists.txt
modified:   ChangeLog
modified:   NEWS
modified:   configure.ac
modified:   doc/gama-local.texi
modified:   lib/gnu_gama/local/network.cpp
modified:   lib/gnu_gama/local/network.h
modified:   lib/gnu_gama/version.cpp
modified:   lib/gnu_gama/xml/localnetworkoctave.cpp
deleted:    tests/gama-local/.gitignore
modified:   tests/gama-local/Makefile.am
modified:   tests/gama-local/input/Makefile.am
new file:   tests/gama-local/input/extra/railway-survey-with-aproximate-xy.gkf
new file:   tests/gama-local/input/extra/railway-survey.gkf
new file:   tests/gama-local/input/extra/railway-survey.xml
modified:   tests/gama-local/scripts/Makefile.am
modified:   tests/gama-local/scripts/gama-local-adjustment.in
new file:   tests/gama-local/scripts/gama-local-extra-tests.in
deleted:    tests/gama-local/scripts/octave-gama-local-read.in
new file:   tests/gama-local/scripts/octave-gama-local.in

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
-2020-??-??	Ales Cepek <cepek@gnu.org>
+2020-??-??   Ales Cepek <cepek@gnu.org>
 
 	* new release 2.10
+
+	* Added a new option --enable-extra-tests (default is no) to the
+	configure.ac script. Extra gama-local test may be running
+	substantially longer (for example see railway-control.gkf).
 
 	* Removed obscure adjustment parameter
 	'update-constraiend-parameters'. The update effected SqliteReader
