--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,10 @@
 GNU Gama NEWS - History of user-visible changes.
 
-Version 2.09 ... 2020
+Version 2.10 ... 2020
 
-* Removed obscure adjustment parameter 'update-constrained-parameters'.
+* Adjustment results output in Octave format (.m file) with independent
+  test of adjustment results (regularization of signular systems by
+  the set of nocstraints).
 
 
 Version 2.09 June 2020
@@ -28,7 +30,7 @@ Maintainer's release
 * new test data krasovsky-1926 with full reference in biblatex
   (renamed from bug-2019-04-23-oleg-goussev)
 
-* new unit test for extern attributes in gama-local/scripts/check_externs.cpp 
+* new unit test for extern attributes in gama-local/scripts/check_externs.cpp
 
 * new HACKING.md by Greg Troxel explicitly declares that autotools are
   the primary build system and alternative build like CMake must never
