--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2020-??-??   Ales Cepek <cepek@gnu.org>
+
+	* new release 2.12
+
+	* Alternative support of input data based on YAML format. YAML
+	support was added for gama-local as an alternative to the existing
+	XML input format. The YAML support is currently limited only to a
+	conversion program gama-local-yaml2gkf but it may be fully
+	integrated in gama-local program later.
+
+
 2020-10-27   Ales Cepek <cepek@gnu.org>
 
 	* new release 2.11
