--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,15 @@
-2020-??-??   Ales Cepek <cepek@gnu.org>
+2021-01-13   Ales Cepek <cepek@gnu.org>
+
+	* new release 2.13
+
+	* Conversions between yaml and input xml (gkf) tested for all
+	available data files in the tests suite (subdirectory gama-local).
+
+	* Command line programs gama-local, gama-local-yaml2gkf and
+	gama-local-gkf2yaml can now read input data from standard input.
+
+
+2020-11-20   Ales Cepek <cepek@gnu.org>
 
 	* new release 2.12
 
